syntax = "proto3";

package stobo.warehouse;

import "google/protobuf/timestamp.proto";
import "types/item.proto";

option java_multiple_files = true;
option java_outer_classname = "WarehouseProto";
option java_package = "com.stobo.proto.warehouse";

service WarehouseService {
  // Creates a new booking. Booked items are apart from the regular warehouse
  // and can not be booked again unless a cancelation occurs.
  rpc CreateWarehouseBooking(CreateWarehouseBookingRequest)
      returns (CreateWarehouseBookingResponse) {}
  // Confirms a booking. After confirmation, the items are removed from the
  // warehouse for good.
  rpc ConfirmWarehouseBooking(ConfirmWarehouseBookingRequest)
      returns (ConfirmWarehouseBookingResponse) {}
  // Cancels a booking. Cancelling a booking will return all items back to the
  // regular warehouse allowing them to be booked again.
  rpc CancelWarehouseBooking(CancelWarehouseBookingRequest)
      returns (CancelWarehouseBookingResponse) {}
  rpc GetWarehouseEntry(GetWarehouseEntryRequest)
      returns (GetWarehouseEntryResponse) {}
  rpc AddWarehouseEntry(AddWarehouseEntryRequest)
      returns (AddWarehouseEntryResponse) {}
  rpc ActivateWarehouseEntry(ActivateWarehouseEntryRequest)
      returns (ActivateWarehouseEntryResponse) {}
  rpc DeactivateWarehouseEntry(DeactivateWarehouseEntryRequest)
      returns (DeactivateWarehouseEntryResponse) {}
}

message Booking {
  optional string id = 1;
  repeated stobo.types.Item items = 2;
  optional google.protobuf.Timestamp created_at = 3;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_INACTIVE = 2;
}

message StatusChange {
  optional string product_id = 1;
  optional string reason = 2;
}

message Entry {
  optional stobo.types.Item item = 1;
  optional Status status = 3;
}

message CreateWarehouseBookingRequest { repeated stobo.types.Item items = 1; }
message CreateWarehouseBookingResponse { optional Booking booking = 1; }

message ConfirmWarehouseBookingRequest { optional string id = 1; }
message ConfirmWarehouseBookingResponse { optional Booking booking = 1; }

message CancelWarehouseBookingRequest { optional string id = 1; }
message CancelWarehouseBookingResponse { optional Booking booking = 1; }

message GetWarehouseEntryRequest { optional string product_id = 1; }
message GetWarehouseEntryResponse { optional Entry entry = 1; }

message AddWarehouseEntryRequest { optional stobo.types.Item item = 1; }
message AddWarehouseEntryResponse { optional Entry entry = 1; }

message ActivateWarehouseEntryRequest { optional StatusChange change = 1; }
message ActivateWarehouseEntryResponse { optional Entry entry = 1; }

message DeactivateWarehouseEntryRequest { optional StatusChange change = 1; }
message DeactivateWarehouseEntryResponse { optional Entry entry = 1; }
